<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_input"
        android:inputType="text">

    </EditText>

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_input"
        android:text="@string/button_check"
        android:textAllCaps="false"
        android:onClick="handleInput"/>

    <LinearLayout
        android:id="@+id/linearLayout_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/button_check"
        >

        <TextView
            android:id="@+id/textView_previousTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_previousSet"
            android:textStyle="italic"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView_previousValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout_previous">

        <TextView
            android:id="@+id/textView_presentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_presentSet"
            android:textStyle="italic"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView_presentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/textView_duplicateStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_duplicate"
                android:textStyle="italic"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_duplicateStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_duplicateNrTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_duplicateNumber"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView_duplicateNrValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_defaultValue"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_nonduplicateNrTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_nonDuplicateNumber"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView_nondupliateNrValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_defaultValue"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_FrequentDuplicates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_frequent"
                android:textAllCaps="false"
                android:onClick="listFrequent"/>

            <Button
                android:id="@+id/button_invalidInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_invalid"
                android:textAllCaps="false"
                android:onClick="listInvalid"/>

            <Button
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_test"
                android:textAllCaps="false"
                android:onClick="test"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
